--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,7 +1,9 @@
 alembic==1.13.1
+bcrypt==4.1.2
 blinker==1.7.0
 click==8.1.7
 flask==3.0.0
+Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.5
