--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 alembic==1.13.1
 bcrypt==4.1.2
+bidict==0.22.1
 blinker==1.7.0
 click==8.1.7
 flask==3.0.0
@@ -7,8 +8,10 @@ Flask-Bcrypt==1.0.1
 Flask-Cors==4.0.0
 Flask-Login==0.6.3
 Flask-Migrate==4.0.5
+Flask-SocketIO==5.3.6
 flask-sqlalchemy==3.1.1
 greenlet==3.0.3
+h11==0.14.0
 importlib-metadata==7.0.1
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -16,7 +19,11 @@ Mako==1.3.0
 MarkupSafe==2.1.3
 psycopg2-binary==2.9.9
 python-dotenv==1.0.0
+python-engineio==4.8.2
+python-socketio==5.11.0
+simple-websocket==1.0.0
 SQLAlchemy==2.0.24
 typing-extensions==4.9.0
 werkzeug==3.0.1
+wsproto==1.2.0
 zipp==3.17.0
